# evoapi-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_ANALYSIS_REPORT.md  CLEANUP_SUMMARY.md  LICENSE  MCP_SERVERS_TEST_REPORT.md  PUBLISH_GITHUB.md  README.md  SECURITY_AUDIT_REPORT.md  evoapi_mcp.py  evolution_api_config.py  export_groups_csv.py  group.py  group_controller.py  mcp_evolution_fix.py  message_sandeco.py  pyproject.toml  send_sandeco.py  softmax_temperature.py  test_groups.py  whatsapp_mcp_config.py
docs/: GITHUB_SETUP.md  INSTALLATION.md  USAGE.md
